[gd_scene load_steps=5 format=3 uid="uid://b4xvq8nix6y1w"]

[ext_resource type="Script" path="res://scripts/NPCController.gd" id="1_0hdqg"]
[ext_resource type="Texture2D" path="res://机场素材/海关背景.png" id="2_1mjkl"]
[ext_resource type="Texture2D" path="res://机场素材/海关表情【平静】.png" id="3_2nklm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(1, 1, 1, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)

[node name="GameScene" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_1mjkl")

[node name="NPCController" type="Node2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("1_0hdqg")

[node name="NPCSprite" type="Sprite2D" parent="NPCController"]
position = Vector2(0, -50)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_2nklm")

[node name="GlassesEffect" type="Sprite2D" parent="NPCController"]
position = Vector2(0, -80)
scale = Vector2(0.3, 0.3)
modulate = Color(1, 1, 1, 0)

[node name="AudioPlayer" type="AudioStreamPlayer" parent="NPCController"]

[node name="QuestionBubble" type="Control" parent="NPCController"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="BubbleBackground" type="Panel" parent="NPCController/QuestionBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="QuestionLabel" type="Label" parent="NPCController/QuestionBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 18
text = "What's the purpose of your visit?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PassportArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0

[node name="PassportSprite" type="Sprite2D" parent="PassportArea"]
position = Vector2(150, 100)
scale = Vector2(0.5, 0.5)

[node name="ProgressArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 300.0
grow_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="ProgressArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
max_value = 3.0
step = 1.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="ProgressArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "问题 1/3"
horizontal_alignment = 1
vertical_alignment = 1